Sun May 11 20:07:05 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkdialog.c (gxk_dialog_show): take away focus from
	unmapped children (gtk bug workaround).

	* beast-gtk/bsttracksynthdialog.c (bst_track_synth_dialog_init): 
	* beast-gtk/bstfiledialog.c (bst_file_dialog_init): 
	set GXK_DIALOG_PRESERVE_STATE flag.

	* beast-gtk/gxk/gxkutils.[hc]: added gxk_idle_unrealize_widget().

	* beast-gtk/gxk/gxkdialog.[hc]: set window manager role from type name.
	added GXK_DIALOG_PRESERVE_STATE to keep size across hiding windows.

Sun May 11 15:54:44 2003  Tim Janik  <timj@gtk.org>

	* shell/bse-scm-glue.boot: added stubs for bse-item-get.

	* beast-gtk/bstparamview.c (bst_param_view_rebuild): show non-writable
	fields only for --hints.

	* shell/bsescminterp.c: simplify smob handling.
	(bse_scm_glue_get_prop): 
	(bse_scm_glue_set_prop): 
	(bse_scm_signal_connect): fix proxy type assertions.

Sun May 11 04:36:05 2003  Tim Janik  <timj@gtk.org>

	* configure.in: supply @NOTDVLBUILD@ Makefile substitution and
	IF_NOTDVLBUILD automake conditional.

	* beast-gtk/Makefile.am: fixup dependancies (automake manages to
	forget about previous values if += is used).

	* beast-gtk/bsttrackview.c: auto popup synth selection dialog
	for Synth cell renderer editing.

	* beast-gtk/gxk/gxkcellrendererpopup.[hc]: added auto-popup proeprty
	to automatically popup custom dialog when edits start.

	* beast-gtk/gxk/gxkutils.c: support auto popups.

Sat May 10 21:33:25 2003  Alper Ersoy  <dirt@gtk.org>

	* docs/generated/Makefile.am: added rule that copies texi files from
	parent directory. adjusted prerequisites from html and site rules.
	added a missing backslash in html rule.

Sat May 10 18:08:18 2003  Tim Janik  <timj@gtk.org>

	* configure.in: disable texitheque checks if --enable-devel-rules
	is set to "no" (non autogen.sh builds).

Sat May 10 15:50:04 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: use new file selection code.
	(bst_update_can_operate):